fix on overflow bg

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -22,6 +22,7 @@ body {
     margin: auto;
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
+	overflow-y: hidden;
 }
 
 header,
